# discord-whiteliste-bot

./: main.py  pyproject.toml
